Port for BTW 3.0, Java 17 and MC 1.6.4