@@ -1,29 +1,49 @@
 plugins {
-    id "fabric-loom" version "0.9-SNAPSHOT"
+    id "fabric-loom" version "1.4-SNAPSHOT"
     id "maven-publish"
-//    id "maven"
 }
-
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
 repositories {
-    maven {url = "https://auoeke.jfrog.io/artifactory/maven"}
+    maven {
+        url = "https://dl.bintray.com/user11681/maven"
+    }
+    maven {
+        name = 'legacy-fabric'
+        url = 'https://maven.legacyfabric.net'
+    }
+    maven {
+        url 'https://jitpack.io'
+    }
+    maven {
+        name 'HalfOf2'
+        url 'https://storage.googleapis.com/devan-maven/'
+    }
+    mavenLocal {
+        url = 'mvn'
+    }
 }
 
 dependencies {
-    minecraft("com.mojang:minecraft:${project.minecraft_version}")
-    mappings("net.fabricmc:yarn:${project.yarn_mappings}:v2")
-    modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings "btw.community:mappings:1.0.3"
 
+    modImplementation fileTree(dir: "libs", include: "**.jar")
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    implementation 'net.fabricmc:fabric-loom:1.4-SNAPSHOT'
+
+    //implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    //implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     compileOnly("com.google.code.findbugs:jsr305:+")
     compileOnly("org.jetbrains:annotations:+")
 
     testImplementation("org.junit.jupiter:junit-jupiter:+")
+
+    implementation("org.ow2.asm:asm:9.7")
+    implementation("org.ow2.asm:asm-commons:9.7")
 
     // concern
     // extraLibs files("${System.getProperty('java.home')}/../lib/tools.jar")
@@ -32,32 +52,28 @@ dependencies {
 //    implementation(include("net.java.dev.jna:jna:5.3.1"))
 //    implementation(include("net.java.dev.jna:jna-platform:5.3.1"))
 
-    modImplementation(include("user11681:dynamic-entry:+"))
-    include(implementation("user11681:reflect:latest.integration"))
-    include(implementation("net.gudenau.lib:unsafe:latest.integration"))
+    include(implementation("net.auoeke:reflect:6.+"))
+    include(implementation("net.auoeke:unsafe:latest.release"))
+}
+
+compileJava {
+    options.compilerArgs.addAll([
+            "--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED"
+    ])
 }
 
 processResources {
     inputs.property "version", project.version
-
-    from(sourceSets.main.resources.srcDirs) {
-        include "fabric.mod.json"
+    filesMatching("fabric.mod.json") {
         expand "version": project.version
-        duplicatesStrategy DuplicatesStrategy.EXCLUDE
-    }
-
-    from(sourceSets.main.resources.srcDirs) {
-        exclude "fabric.mod.json"
-        duplicatesStrategy DuplicatesStrategy.EXCLUDE
     }
 }
 
 // ensure that the encoding is set to UTF-8, no matter what the system default is
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile).configureEach {
-    it.options.encoding = "UTF-8"
-    it.options.release = 16
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
@@ -79,6 +95,12 @@ jar {
                 "Can-Retransform-Classes": "true"
         )
     }
+}
+
+loom {
+    setIntermediaryUrl('https://maven.legacyfabric.net/net/legacyfabric/intermediary/%1$s/intermediary-%1$s-v2.jar');
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 // configure the maven publication
